// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addBrowserUpdate() Snaphot does not show message if Map.prototype.keys is defined 1`] = `undefined`;

exports[`addBrowserUpdate() Snaphot does not show message if Map.prototype.keys is defined 2`] = `
<body>
  <div
    id="dummy-content"
  />
</body>
`;

exports[`addBrowserUpdate() Snaphot shows message if Map.prototype.keys not defined 1`] = `
<div
  style="
    background-color: white;
    border: 0.5em solid red;
    font-size: 200%;
    font-weight: bold;
    min-height: 6em;
    margin-top: 4rem;
    padding: 1em;
    text-align: center;
  "
>
  <p>
    Please upgrade your browser.
  </p>
  <p>
    <a
      href="https://browser-update.org/update-browser.html"
    >
      More information
    </a>
  </p>
</div>
`;

exports[`addBrowserUpdate() Snaphot shows message if Map.prototype.keys not defined 2`] = `
<body>
  <div
    style="
    background-color: white;
    border: 0.5em solid red;
    font-size: 200%;
    font-weight: bold;
    min-height: 6em;
    margin-top: 4rem;
    padding: 1em;
    text-align: center;
  "
  >
    <p>
      Please upgrade your browser.
    </p>
    <p>
      <a
        href="https://browser-update.org/update-browser.html"
      >
        More information
      </a>
    </p>
  </div>
  <div
    id="dummy-content"
  />
</body>
`;
